--- a/index.html
+++ b/index.html
@@ -2,66 +2,70 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0">
 	<link rel="stylesheet" href="paper.css">
 	<link rel="stylesheet" href="index.css">
+    <meta name="format-detection" content="telephone=no">
     <title>Convite</title>
 </head>
 <body>
-    <div class="folder open">
-        <div class="part top">
-            <div class="triangle"></div>
-            <div class="triangle-back"></div>
-            <div class="seal">
-                <img src="images/selo.png" alt="Selo" />
-            </div>
-            <div class="logo">
-                <img src="images/logo.svg" alt="Logo" />
-                <span>Unidos pelo amor</span>
-            </div>
-            <div class="part top-reverse">
-                <div class="guests">
+    <div id="main-wrapper">
+        <div class="folder open">
+            <div class="part top">
+                <div class="triangle"></div>
+                <div class="triangle-back"></div>
+                <div class="seal">
+                    <img src="images/selo.png" alt="Selo" />
+                </div>
+                <div class="logo">
+                    <img src="images/logo.svg" alt="Logo" />
+                    <span>Unidos pelo amor</span>
+                </div>
+                <div class="part top-reverse">
+                    <div class="guests">
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="part middle">
-            <div class="paper">
-				<div class="names">
-					<img src="images/nomes.png" alt="Nomes dos noivos" />
-				</div>
-				<div class="wedding-date">
-					<div>
-						<div>Maio</div>
-					</div>
-					<div class="day">
-						<div>24</div>
-					</div>
-					<div>
-						<div>2025</div>
-					</div>
-				</div>
-				<div class="directions">
-					<h2>Cerimónia</h2>
-					<div>Igreja Paroquial da Abóboda, pelas 12h00</div>
-					<h2>Copo D'água</h2>
-					<div>Quinta da Barreta, em Alcabideche</div>
-				</div>
-				<div class="branch-left"></div>
-				<div class="branch-right"></div>
-			</div>
-        </div>
-        <div class="part bottom">
-            <div class="confirmation">
-                <div>Agradecemos confirmação até 01.04.2025</div>
-                <div class="phones">
-                    <div>Cátia 938 075 590</div>
-                    <div>Miguel 916 705 705</div>
+            <div class="part bottom">
+                <div class="confirmation">
+                    <div>Agradecemos confirmação até 01.04.2025</div>
+                    <div class="phones">
+                        <div>Cátia 938 075 590</div>
+                        <div>Miguel 916 705 705</div>
+                    </div>
+                </div>
+            </div>
+            <div class="part middle">
+                <div class="paper">
+                    <div class="names">
+                        <img src="images/nomes.png" alt="Nomes dos noivos" />
+                    </div>
+                    <div class="wedding-date">
+                        <div>
+                            <div>Maio</div>
+                        </div>
+                        <div class="day">
+                            <div>24</div>
+                        </div>
+                        <div>
+                            <div>2025</div>
+                        </div>
+                    </div>
+                    <div class="directions">
+                        <h2>Cerimónia</h2>
+                        <div>Igreja Paroquial da Abóboda, pelas 12h00</div>
+                        <h2>Copo D'água</h2>
+                        <div>Quinta da Barreta, em Alcabideche</div>
+                    </div>
+                    <div class="branch-left"></div>
+                    <div class="branch-right"></div>
                 </div>
             </div>
         </div>
     </div>
 
     <script>
+        const mainWrapper = document.querySelector('#main-wrapper');
         const folder = document.querySelector('.folder');
         let isOpen = true;
 
@@ -69,16 +73,10 @@
         const urlParams = new URLSearchParams(window.location.search);
         const guests = urlParams.get('guests');
 
-        console.log(guests)
-
         const guestElem = document.querySelector('.guests').textContent = guests;
 
         document.body.addEventListener('click', () => {
-            if (!isOpen) {
-                folder.classList.remove('closing');
-                folder.classList.add('open');
-                isOpen = true;
-            } else {
+            if (isOpen) {
                 folder.classList.add('closing');
                 folder.classList.remove('open');
                 isOpen = false;
@@ -87,6 +85,10 @@
                 }, 2000);
             }
         });
+        // if its mobile scale the container
+		if (window.innerWidth < 768) {
+			mainWrapper.classList.add('mobile');
+		}
     </script>
 </body>
 </html>
